--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=AdminBackend
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/YUHAN
+spring.datasource.username=webuser
+spring.datasource.password=12345
+
+
+logging.level.org.springframework=info
+logging.level.org.zerock=debug
+logging.level.org.springframework.security=trace
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
