--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/hellospring
+spring.datasource.url=jdbc:mariadb://localhost:3306/Yuhan
 spring.datasource.username=webuser
 spring.datasource.password=0525
 
@@ -11,6 +11,7 @@ logging.level.org.springframework.security=trace
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
 
 
 
