api 가져와서 json 반환 성공(DB에 저장해야함)

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    implementation 'javax.validation:validation-api'
+
+    //implementation 'javax.validation:validation-api'
     implementation 'org.hibernate.validator:hibernate-validator'
 
 
