--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-# ??? ?? ??
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/Yuhan
 spring.datasource.username=webuser
@@ -10,7 +9,7 @@ logging.level.org.zerock=debug
 logging.level.org.springframework.security=trace
 
 # JPA ??
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
