--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.modelmapper:modelmapper:3.1.0'
-
+    //implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
+    //추가
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
@@ -36,7 +39,8 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
 
-    //implementation 'javax.validation:validation-api'
+
+    //implementation 'jakarta.validation:validation-api'
     implementation 'org.hibernate.validator:hibernate-validator'
 
 
