--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=AdminBackend
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/YUHAN
+spring.datasource.url=jdbc:mariadb://localhost:3306/YuHan
 spring.datasource.username=webuser
 spring.datasource.password=12345
 
