--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     //추가
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    //추가 0501
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.3'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
