--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ configurations {
 }
 
 repositories {
+    maven { url 'https://jitpack.io' }
     mavenCentral()
 }
 
@@ -27,6 +28,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.modelmapper:modelmapper:3.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     //implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     //추가
@@ -40,7 +44,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-
+    implementation 'javax.validation:validation-api:2.0.1.Final'
 
     //implementation 'jakarta.validation:validation-api'
     implementation 'org.hibernate.validator:hibernate-validator'
@@ -48,6 +52,18 @@ dependencies {
 
     testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
     testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+
+    // jwt
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+
+    // 아임포트
+    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+    implementation 'com.google.guava:guava:30.1-jre' // 최신 버전 확인하여 업데이트 가능
 
 }
 
