--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // Thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'  // 이 줄을 추가합니다
+
+
     // 기타 의존성
     implementation 'org.modelmapper:modelmapper:3.1.0'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
