--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,9 @@ dependencies {
 
     implementation 'org.apache.pdfbox:pdfbox:2.0.29'
 
+    // iText PDF 라이브러리
+    implementation 'com.itextpdf:itext7-core:7.1.16'
+
 }
 
 tasks.named('test') {
