--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ logging.level.org.hibernate.SQL=ERROR
 # JPA ??
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 # JWT ??
 # Base64
@@ -51,3 +51,8 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 file.storage.path=D:/Admin/ProtectedFileStore/
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=0525
+
