rds에서 로컬 db로 다시 바꿈

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=AdminBackend
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://yuhan.c9i4uoqkyugi.ap-northeast-2.rds.amazonaws.com:3306/INUDB
-spring.datasource.username=root
-spring.datasource.password=inu08310831
+#spring.datasource.url=jdbc:mariadb://yuhan.c9i4uoqkyugi.ap-northeast-2.rds.amazonaws.com:3306/INUDB
+#spring.datasource.username=root
+#spring.datasource.password=inu08310831
+spring.datasource.url=jdbc:mariadb://localhost:3306/YUHAN
+spring.datasource.username=webuser
+spring.datasource.password=12345
 
 # ?? ??
 logging.level.org.springframework=info
