IR 전송 및 내역 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=AdminBackend
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://yuhan.c9i4uoqkyugi.ap-northeast-2.rds.amazonaws.com:3306/INUDB
-spring.datasource.username=root
-spring.datasource.password=inu08310831
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/Yuhan
+spring.datasource.username=webuser
+spring.datasource.password=0525
 # ?? ??
 logging.level.org.springframework=info
 logging.level.org.zerock=debug
