--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=AdminBackend
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://localhost:3306/Yuhan
-#spring.datasource.username=webuser
-#spring.datasource.password=0525
-spring.datasource.url=jdbc:mariadb://localhost:3306/YUHAN
+spring.datasource.url=jdbc:mariadb://localhost:3306/Yuhan
 spring.datasource.username=webuser
-spring.datasource.password=12345
+spring.datasource.password=0525
+#spring.datasource.url=jdbc:mariadb://localhost:3306/YUHAN
+#spring.datasource.username=webuser
+#spring.datasource.password=12345
 
 # ?? ??
 logging.level.org.springframework=info
