--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,7 +53,8 @@ spring.servlet.multipart.max-file-size=10MB
 # ?? ?? ?? (?: 10MB)
 spring.servlet.multipart.max-request-size=10MB
 
-file.storage.path=D:/Admin/ProtectedFileStore/
+#file.storage.path=D:/Admin/ProtectedFileStore/
+file.storage.path=src/main/resources/contracts/
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
